Bug 1111343: Wrapping of table-header when sorting with "Mozilla" skin

--- a/skins/contrib/Mozilla-OpenSans/global.css
+++ b/skins/contrib/Mozilla-OpenSans/global.css
@@ -299,6 +299,10 @@ hr {
     width: 99%;
 }
 
+#bugzilla-body th {
+    white-space: nowrap;
+}
+
 /* Home */
 
 #page-index {
