--- a/skins/contrib/Mozilla/global.css
+++ b/skins/contrib/Mozilla/global.css
@@ -343,6 +343,10 @@ hr {
     width: 99%;
 }
 
+#bugzilla-body th {
+    white-space: nowrap;
+}
+
 /* Home */
 
 #page-index {
